--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,7 +37,7 @@ jobs:
         with:
           deno-version: v1.x
       - name: 😎 Test
-        run: deno test --allow-net --allow-env=DENO_DEPLOYMENT_ID --allow-read=. --unstable --coverage=coverage
+        run: deno test --allow-net --allow-read=. --unstable --coverage=coverage
       - name: Create coverage report
         run: deno coverage ./coverage --lcov > coverage.lcov
       - name: Codecov
