--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,6 +37,8 @@ jobs:
         with:
           deno-version: v1.x
       - name: 😎 Test
+        env:
+          FIREBASE_CONFIG_TEST: ${{secrets.FIREBASE_CONFIG_TEST}}
         run: deno test --allow-net --allow-read=. --unstable --coverage=coverage
       - name: Create coverage report
         run: deno coverage ./coverage --lcov > coverage.lcov
