--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
         with:
           deno-version: v1.x
       - name: 🧐 Type Check
-        run: deno test --no-run ./dev/typecheck.ts
+        run: deno test --no-run --no-check=remote ./dev/typecheck.ts
   Test:
     runs-on: ubuntu-latest
     steps:
@@ -39,7 +39,8 @@ jobs:
       - name: 😎 Test
         env:
           FIREBASE_CONFIG_TEST: ${{secrets.FIREBASE_CONFIG_TEST}}
-        run: deno test --allow-net --allow-env=FIREBASE_CONFIG_TEST --allow-read=. --allow-write=. --unstable --location=http://foo.com/ --coverage=coverage
+          #DENO_SQLITE_PATH: "./db/sqlite_dll/sqlite3.dll"
+        run: deno test --allow-net --allow-env=FIREBASE_CONFIG_TEST,DENO_SQLITE_PATH --allow-read=. --allow-write=. --allow-ffi --unstable --coverage=coverage --jobs
       - name: Create coverage report
         run: deno coverage ./coverage --lcov > coverage.lcov
       - name: Codecov
